# DesktopGames

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
Minesweeper/: .gitignore  .gresource.xml  Makefile  Makefile.am  README.md  mine_square.ui  minesweeper.6  minesweeper.6.md  minesweeper.6.txt  minesweeper.c  minesweeper.css  minesweeper.gresource.xml  minesweeper.ui  minesweeper_game.c  minesweeper_game.h
ebuild/: desktop-games-1.0.3.ebuild  metadata.xml
